# veetee

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: 01-xiaozhi-audit.md  02-system-architecture.md  03-firmware-spec.md  04-protocol-compatibility.md  05-realtime-conversation.md  06-provider-and-mcp.md  07-manager-product-spec.md  08-roadmap.md  09-testing-security-operations.md  10-ai-development-playbook.md  11-ai-first-design-principles.md  12-dynamic-config-and-artifacts.md  13-decision-register.md  14-model-and-provider-baseline.md  15-local-ai-runtime.md  16-device-ui-and-ui-packs.md  17-xiaozhi-useful-capabilities.md  18-device-diagnostics.md  19-signed-firmware-ota.md  20-agent-prompts-and-personalities.md
skills/veetee-development/: SKILL.md
skills/veetee-development/agents/: openai.yaml
skills/veetee-development/references/: source-map.md  task-checklists.md
veetee-firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
veetee-firmware/boards/veetee-s3-n16r8/: README.md
veetee-firmware/cmake/: check_binary_size.cmake
veetee-firmware/components/monocypher/: CMakeLists.txt  README.md
veetee-firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
veetee-firmware/main/app/: state_machine.cpp  state_machine.h
veetee-firmware/main/audio/: audio_diagnostics.cpp  audio_diagnostics.h  i2s_audio.cpp  i2s_audio.h  playback_control.h  wake_detector.cpp  wake_detector.h  wake_detector_policy.cpp  wake_detector_policy.h
veetee-firmware/main/board/: board_config.h  veetee_board.cpp  veetee_board.h
veetee-firmware/main/display/: st7789_display.cpp  st7789_display.h  state_visual.cpp  state_visual.h  ui_pack.cpp  ui_pack.h
veetee-firmware/main/input/: button.cpp  button.h
veetee-firmware/main/mcp/: device_mcp.cpp  device_mcp.h
veetee-firmware/main/network/: captive_portal_routes.cpp  captive_portal_routes.h  endpoint_url.cpp  endpoint_url.h  provisioning_portal.cpp  provisioning_portal.h  wifi_candidate_order.cpp  wifi_candidate_order.h  wifi_manager.cpp  wifi_manager.h
veetee-firmware/main/ota/: bootstrap_client.cpp  bootstrap_client.h  firmware_manifest.cpp  firmware_manifest.h  firmware_updater.cpp  firmware_updater.h  resource_manifest.cpp  resource_manifest.h  resource_reconciler.cpp  resource_reconciler.h
veetee-firmware/main/security/: signed_json.cpp  signed_json.h
veetee-firmware/main/settings/: activation_record.cpp  activation_record.h  reported_state_record.cpp  reported_state_record.h  reported_state_store.cpp  reported_state_store.h  resource_record.cpp  resource_record.h  resource_state_store.cpp  resource_state_store.h  settings_store.cpp  settings_store.h  wifi_profile_record.cpp  wifi_profile_record.h
veetee-firmware/main/telemetry/: reported_state_outbox.cpp  reported_state_outbox.h  reported_state_reporter.cpp  reported_state_reporter.h
veetee-firmware/main/transport/: protocol_v1.cpp  protocol_v1.h  websocket_task_policy.h  websocket_transport.cpp  websocket_transport.h
veetee-firmware/partitions/: veetee_16mb.csv
veetee-firmware/prototypes/device-ui/: README.md  app.js  index.html  styles.css
veetee-firmware/tests/: CMakeLists.txt  activation_record_test.cpp  audio_diagnostics_test.cpp  captive_portal_routes_test.cpp  device_mcp_test.cpp  endpoint_url_test.cpp  firmware_manifest_test.cpp  playback_control_test.cpp  protocol_v1_test.cpp  reported_state_outbox_test.cpp  reported_state_record_test.cpp  resource_manifest_test.cpp  resource_record_test.cpp  state_machine_test.cpp  state_visual_test.cpp  wake_detector_policy_test.cpp  websocket_task_policy_test.cpp  wifi_candidate_order_test.cpp  wifi_profile_record_test.cpp
veetee-server/: .env.example  README.md  compose.infra.yaml  package-lock.json  package.json  tsconfig.base.json
veetee-server/apps/manager-api/: .env.example  README.md  package.json  tsconfig.json
veetee-server/apps/manager-web/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
veetee-server/apps/voice-server/: .env.example  README.md  main.py  model-manifest.json  pyproject.toml
veetee-server/apps/voice-server/src/veetee_voice_server/: __init__.py  app.py  cli.py  config.py  logging.py  manager.py  prompting.py  py.typed  readiness.py  telemetry.py
veetee-server/apps/voice-server/src/veetee_voice_server/conversation/: __init__.py  arbiter.py  cancellation.py  engine.py  evidence.py  inactivity.py  sentence_chunker.py  types.py
veetee-server/apps/voice-server/src/veetee_voice_server/prompts/: agent-base-prompt.txt
veetee-server/apps/voice-server/src/veetee_voice_server/providers/: __init__.py  contracts.py  failover.py  local_asr.py  local_runtime.py  local_tts.py  nine_router.py  semantic.py  silero_vad.py  tools.py
veetee-server/apps/voice-server/src/veetee_voice_server/transport/: __init__.py  lab.py  mcp.py  opus.py  protocol.py  session.py  session_registry.py  sink.py
veetee-server/apps/voice-server/tests/: test_conversation_engine.py  test_device_mcp.py  test_health.py  test_inactivity.py  test_lab_session.py  test_local_ai.py  test_manager.py  test_nine_router.py  test_prompting.py  test_provider_failover.py  test_session_registry.py  test_telemetry.py  test_transport_and_semantic.py  test_turn_arbiter.py  test_websocket_protocol.py
veetee-server/prototypes/manager-web/: README.md  app.js  device-ui-studio.css  index.html  styles.css
veetee-server/scripts/: benchmark_local_ai.py  build_ui_pack.mjs  configure_local_env.mjs  configure_voice_env.py  e2e_artifact_edge.mjs  e2e_voice_host.py  e2e_voice_loop.py  infra-host-down.sh  infra-host-prepare.sh  infra-host-up.sh  prepare_local_ai.py  prepare_native_tts.py  probe_nine_router.py  release_firmware.mjs  release_resource.mjs  validate-docs.mjs
veetee-server/scripts/lib/: firmware-image.mjs  firmware-image.test.mjs  resource-manifest.d.mts  resource-manifest.mjs  ui-pack.d.mts  ui-pack.mjs  ui-pack.test.mjs
veetee-server/ui-packs/monolith/: manifest.json  theme.json
veetee-server/ui-packs/quiet/: manifest.json  (+1 more)
(+155 files in other folders)
