[project]
name = "veetee-voice-server"
version = "0.1.0"
description = "Realtime voice and conversation service for Veetee devices"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "huggingface-hub>=0.36.0",
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sherpa-onnx>=1.13.4",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
    "vieneu>=3.2.3",
]

[project.scripts]
veetee-voice-server = "veetee_voice_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veetee_voice_server"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["veetee_voice_server"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
